<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/search_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_of_drink"
        android:autofillHints="name"
        android:inputType="text"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/search_button"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_input" />

    <Button
        android:id="@+id/show_button"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/show"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_input" />

</androidx.constraintlayout.widget.ConstraintLayout>