<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CocktailDetailFragment">

    <TextView
        android:id="@+id/tv_drink_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="110dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_drink_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_drink_name"
        android:layout_marginTop="4dp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/ingredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingredients"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tv_drink_category"
        android:layout_marginTop="4dp"/>

    <TextView
        android:id="@+id/ingredient_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ingredients"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/ingredient_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ingredient_1"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/ingredient_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ingredient_2"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/ingredient_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ingredient_3"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/ingredient_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ingredient_4"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/ingredient_6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ingredient_5"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/ingredient_7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ingredient_6"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/ingredient_8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ingredient_7"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/ingredient_9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ingredient_8"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/ingredient_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ingredient_9"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/ingredient_11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ingredient_10"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/ingredient_12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ingredient_11"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/ingredient_13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ingredient_12"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/ingredient_14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ingredient_13"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/ingredient_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ingredient_14"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/instruction"
        app:layout_constraintTop_toBottomOf="@id/ingredient_15"/>

    <TextView
        android:id="@+id/drink_instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/instruction"
        android:textSize="14sp"/>

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/drink_instruction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>